--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-<img src="Bunnie.jpg" alt="a picture of bunnie from xenosaga">
+<style>
+
+  body{
+    background-color: rgb(42, 100, 191);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  
+
+  .bunnie {
+    width: 200px;
+  	height: 200px;
+    background-image: url("bunnie.jpg");
+    }
+  
+  .spinner div {
+    position: fixed;
+    top: -250px;
+    width: 1200px;
+    height: 1200px;
+    border: 1px solid #ccc;
+    background: rgba(100,170,255,0.8);
+    box-shadow: inset 0 0 20px rgba(0,0,0,0.2);
+}
+
+.spinner .face1 { 
+    -webkit-transform: translateZ(600px);
+    -ms-transform: translateZ(600px);
+    transform: translateZ(600px);
+}
+.spinner .face2 { 
+    -webkit-transform: rotateY(900deg) translateZ(600px); 
+    -ms-transform: rotateY(900deg) translateZ(600px); 
+    transform: rotateY(900deg) translateZ(600px); 
+}
+.spinner .face3 { 
+    -webkit-transform: rotateY(900deg) rotateX(900deg) translateZ(600px); 
+    -ms-transform: rotateY(900deg) rotateX(height:900deg) translateZ(600px); 
+    transform: rotateY(900deg) rotateX(900deg) translateZ(600px); 
+}
+.spinner .face4 { 
+    -webkit-transform: rotateY(1800deg) rotateZ(900deg) translateZ(600px); 
+    -ms-transform: rotateY(1800deg) rotateZ(900deg) translateZ(600px); 
+    transform: rotateY(1800deg) rotateZ(900deg) translateZ(60px); 
+}
+.spinner .face5 { 
+    -webkit-transform: rotateY(-90deg) rotateZ(90deg) translateZ(60px); 
+    -ms-transform: rotateY(-90deg) rotateZ(90deg) translateZ(60px); 
+    transform: rotateY(-90deg) rotateZ(90deg) translateZ(60px); 
+}
+.spinner .face6 { 
+    -webkit-transform: rotateX(-90deg) translateZ(60px); 
+    -ms-transform: rotateX(-90deg) translateZ(60px); 
+    transform: rotateX(-90deg) translateZ(60px); 
+}
+
+.spinner {
+    -webkit-animation: spincube 12s ease-in-out infinite;
+    animation: spincube 12s ease-in-out infinite;
+    -webkit-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform-origin: 60px 60px 0;
+    -ms-transform-origin: 60px 60px 0;
+    transform-origin: 60px 60px 0;
+}
+
+@-webkit-keyframes spincube {
+    16%      { -webkit-transform: rotateY(-90deg);                }
+    33%      { -webkit-transform: rotateY(-90deg) rotateZ(90deg); }
+    50%      { -webkit-transform: rotateY(180deg) rotateZ(90deg); }
+    66%      { -webkit-transform: rotateY(90deg) rotateX(90deg);  }
+    83%      { -webkit-transform: rotateX(90deg);                 }
+}
+@keyframes spincube {
+    16%      { -ms-transform: rotateY(-90deg); transform: rotateY(-90deg); }
+    33%      { -ms-transform: rotateY(-90deg) rotateZ(90deg); transform: rotateY(-90deg) rotateZ(90deg); }
+    50%      { -ms-transform: rotateY(180deg) rotateZ(90deg); transform: rotateY(180deg) rotateZ(90deg); }
+    66%      { -ms-transform: rotateY(90deg) rotateX(90deg); transform: rotateY(90deg) rotateX(90deg); }
+    83%      { -ms-transform: rotateX(90deg); transform: rotateX(90deg); }
+}
+
+  
+</style>
+
+<div id="stage" style="width: 120px; height: 120px;">
+    <div class="spinner">
+        <div class="face1"></div>
+        <div class="face2"></div>
+        <div class="face3"></div>
+        <div class="face4"></div>
+        <div class="face5"></div>
+        <div class="face6"></div>
+    </div>
+</div>
+
+<div class="bunnie">
+</div>
