--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     border: 1px solid #ccc;
     background: rgba(100,170,255,0.8);
     box-shadow: inset 0 0 20px rgba(0,0,0,0.2);
+    z-index: -5
 }
 
 .spinner .face1 { 
@@ -86,6 +87,8 @@
   
 </style>
 
+<img src="bunnie.jpg" alt="bunnie from xenosaga">
+
 <div id="stage" style="width: 120px; height: 120px;">
     <div class="spinner">
         <div class="face1"></div>
@@ -97,5 +100,4 @@
     </div>
 </div>
 
-<div class="bunnie">
-</div>
+
