--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   .bunnie {
     width: 200px;
   	height: 200px;
-    background-image: url("bunnie.jpg");
+    background-image: url("Bunnie.jpg");
     }
   
   .spinner div {
@@ -87,7 +87,7 @@
   
 </style>
 
-<img src="bunnie.jpg" alt="bunnie from xenosaga">
+
 
 <div id="stage" style="width: 120px; height: 120px;">
     <div class="spinner">
@@ -99,5 +99,7 @@
         <div class="face6"></div>
     </div>
 </div>
+
+<div class="bunnie"></div>
 
 
