--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     margin: 0;
   }
   
-
   .bunnie {
     width: 200px;
-  	height: 200px;
-    background-image: url("Bunnie.jpg");
+  	height: 300px;
+    z-index: 6;
     }
   
   .spinner div {
@@ -26,6 +25,10 @@
     box-shadow: inset 0 0 20px rgba(0,0,0,0.2);
     z-index: -5
 }
+  
+  .header div{
+    z-index: 5
+  }
 
 .spinner .face1 { 
     -webkit-transform: translateZ(600px);
@@ -88,6 +91,7 @@
 </style>
 
 
+<h1 class="header"> Welcome to my Xenosaga Fan Page!</h1>
 
 <div id="stage" style="width: 120px; height: 120px;">
     <div class="spinner">
@@ -100,6 +104,7 @@
     </div>
 </div>
 
-<div class="bunnie"></div>
+<img src="Bunnie.jpg" class="bunnie" alt="Picture of Bunnie from Xenosaga">
+
 
 
