header is working!

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
     z-index: -5
 }
   
-  .header div{
-    z-index: 5
+  h1{
+    z-index: 5;
+    position: fixed;
+    top: 0px;
+    
   }
 
 .spinner .face1 { 
@@ -91,7 +94,7 @@
 </style>
 
 
-<h1 class="header"> Welcome to my Xenosaga Fan Page!</h1>
+<h1 style="font-family:Luminari, fantasy"> Welcome to my Xenosaga Fan Page!</h1>
 
 <div id="stage" style="width: 120px; height: 120px;">
     <div class="spinner">
