--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     z-index: 6;
     }
   
+  audio{
+    position: fixed;
+    bottom: 0;
+    z-index: 10
+  }
+  
   .spinner div {
     position: fixed;
     top: -250px;
@@ -94,7 +100,7 @@
 </style>
 
 
-<h1 style="font-family:Luminari, fantasy"> Welcome to my Xenosaga Fan Page!</h1>
+<h1 style="font-family:Luminari, fantasy"> Welcome to the Unus Mundus Network</h1>
 
 <div id="stage" style="width: 120px; height: 120px;">
     <div class="spinner">
@@ -109,5 +115,5 @@
 
 <img src="Bunnie.jpg" class="bunnie" alt="Picture of Bunnie from Xenosaga">
 
-
+<audio src="umn music.mp3" controls></audio>
 
