--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   body{
     background-color: rgb(42, 100, 191);
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
+    justify-content: center;
     margin: 0;
   }
   
@@ -13,8 +12,9 @@
     width: 200px;
   	height: 300px;
     z-index: 6;
-    top: 150px;
-    left: 100px;
+    position: absolute;
+    top: 100px;
+    right: 0px;
     }
   
   audio{
@@ -38,6 +38,7 @@
     background: rgba(162, 162, 162, 0.63);
     position: fixed;
     top: 0px;
+   border: 1px solid black;
   }
   
   * {
