--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     background-color: rgb(42, 100, 191);
     display: flex;
     height: 100vh;
-    justify-content: center;
     margin: 0;
   }
   
@@ -13,14 +12,35 @@
   	height: 300px;
     z-index: 6;
     position: absolute;
-    top: 100px;
+    top: 120px;
     right: 0px;
     }
+  
+  .contentheader{
+    width: 400px;
+    height: 100px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    left: 100px;
+    top: 250px;
+   border: 1px solid black;
+  }
+  
+  .logo{
+    position: absolute;
+    left: 0px;
+    width: 100px;
+  	height: 100px;
+    z-index: 6;
+    top: 250px;
+  }
   
   audio{
     position: fixed;
     bottom: 0;
-    z-index: 10
+    z-index: 10;
+    justify-content: center;
   }
 
   
@@ -28,7 +48,11 @@
     z-index: 9;
     position: fixed;
     top: 0px;
-    color: white;
+    color: white;    
+    line-height: 1.5;
+  	display: inline-block;
+  	vertical-align: middle;
+    text-align: center;
   }
   
     .header {
@@ -37,6 +61,7 @@
     z-index: 8;
     background: rgba(162, 162, 162, 0.63);
     position: fixed;
+
     top: 0px;
    border: 1px solid black;
   }
@@ -110,10 +135,9 @@ html, body {
   
 </style>
 
-
-<h1 
-    style="font-family:Courier, monospace"> Welcome to the Unus Mundus Network</h1>
-<div class="header"></div>
+<div class="header">
+<h1 style="font-family:Courier, monospace"> Welcome to the Unus Mundus Network!</h1>
+</div>
 
 
 <div class="cube">
@@ -125,7 +149,13 @@ html, body {
   <div class="back"></div>
 </div>
 
+<div class="contentheader"> This is a fanpage for the Xenosaga games. It's based on 
+<a href="https://www.youtube.com/watch?v=LFrD8hb_QVo"> the internet portal in the game</a>. </div>
+
+<img src="umnlogo.png" class="logo" alt="UMN logo from Xenosaga">
+
 <img src="Bunnie.jpg" class="bunnie" alt="Picture of Bunnie from Xenosaga">
 
-<audio src="umn music.mp3" controls></audio>
-
+<div align="center">
+<audio controls autoplaysrc="umn music.mp3"></audio>
+</div>
