--- a/index.html
+++ b/index.html
@@ -27,6 +27,39 @@
    border: 1px solid black;
   }
   
+    .contentheader2{
+    width: 400px;
+    height: 100px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    left: 100px;
+    top: 450px;
+   border: 1px solid black;
+  }
+  
+      .contentheader3{
+    width: 400px;
+    height: 100px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    left: 100px;
+    top: 850px;
+   border: 1px solid black;
+  }
+  
+      .contentheader4{
+    width: 400px;
+    height: 100px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    left: 100px;
+    top: 1050px;
+   border: 1px solid black;
+  }
+  
   .logo{
     position: absolute;
     left: 0px;
@@ -35,6 +68,55 @@
     z-index: 6;
     top: 250px;
   }
+  
+    .logo2{
+    position: absolute;
+    left: 0px;
+    width: 100px;
+  	height: 100px;
+    z-index: 6;
+    top: 450px;
+  }
+  
+      .logo3{
+    position: absolute;
+    left: 0px;
+    width: 100px;
+  	height: 100px;
+    z-index: 6;
+    top: 850px;
+  }
+  
+      .logo4{
+    position: absolute;
+    left: 0px;
+    width: 100px;
+  	height: 100px;
+    z-index: 6;
+    top: 1050px;
+  }
+  
+  .textbox{
+    width: 400px;
+    height: 800px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    left: 100px;
+    top: 1250px;
+   border: 1px solid black;
+  }
+  
+  .p2image
+  {
+    width: 400px;
+    height: 200px;
+    z-index: 6;
+    top: 600px;
+    left: 100px;
+    position: absolute;
+  }
+  
   
   audio{
     position: fixed;
@@ -149,13 +231,39 @@ html, body {
   <div class="back"></div>
 </div>
 
-<div class="contentheader"> This is a fanpage for the Xenosaga games. It's based on 
+<div class="contentheader" style="font-family:Courier, monospace"> This is a fanpage for the Xenosaga games. It's based on 
 <a href="https://www.youtube.com/watch?v=LFrD8hb_QVo"> the internet portal in the game</a>. </div>
 
 <img src="umnlogo.png" class="logo" alt="UMN logo from Xenosaga">
+
+<div class="contentheader2" style="font-family:Courier, monospace"> It's pretty funny nowadays to go back and play something
+  where sending work e-mails is a gameplay feature. It reminds me of another game that came out 
+around this time, Persona 2: Innocent Sin.</div>
+
+<img src="umnlogo.png" class="logo2" alt="UMN logo from Xenosaga">
+
+<div class="contentheader3" style="font-family:Courier, monospace"> Seeing a bunch of kids ask an adult how to 
+use the internet is pretty funny. But it reminds me that people born after these games, like me, can take the
+internet for granted.</div>
+
+<img src="umnlogo.png" class="logo3" alt="UMN logo from Xenosaga">
+
+
+<div class="contentheader4" style="font-family:Courier, monospace"> When my parents were my age, and they went to college, they had an 
+extra credit assignment to send their professors an email. How wild is that?</div>
+
+<img src="umnlogo.png" class="logo4" alt="UMN logo from Xenosaga">
+
+<img src="persona2internet.jpeg" class="p2image" alt="Wow, cool, Maya-san! You're so good at your job. You even use the Internet?">
 
 <img src="Bunnie.jpg" class="bunnie" alt="Picture of Bunnie from Xenosaga">
 
 <div align="center">
 <audio controls autoplaysrc="umn music.mp3"></audio>
 </div>
+
+<div class="textbox" style="font-family:Courier, monospace"> Anyways, back to the fanpage. Xenosaga is 
+  pretty great, it's a trilogy of three JRPGs that all came out on the PlayStation 2. It's kind of infamous
+  for using the Bible as inspiration, leading to some pretty hilarious wiki pages.</div>
+
+
