added some images

--- a/index.html
+++ b/index.html
@@ -12,8 +12,26 @@
   	height: 300px;
     z-index: 6;
     position: absolute;
-    top: 120px;
+    top: 250px;
     right: 0px;
+    }
+  
+    .wiki {
+    width: 300px;
+  	height: 100px;
+    z-index: 6;
+    position: absolute;
+    top: 1450px;
+    left: 0px;
+    }
+  
+    .sixsixsix {
+    width: 300px;
+  	height: 200px;
+    z-index: 6;
+    position: absolute;
+    top: 1450px;
+    left: 350px;
     }
   
   .contentheader{
@@ -38,7 +56,7 @@
    border: 1px solid black;
   }
   
-      .contentheader3{
+    .contentheader3{
     width: 400px;
     height: 100px;
     z-index: 5;
@@ -96,9 +114,18 @@
     top: 1050px;
   }
   
+        .logo5{
+    position: absolute;
+    left: 0px;
+    width: 100px;
+  	height: 100px;
+    z-index: 6;
+    top: 1250px;
+  }
+  
   .textbox{
     width: 400px;
-    height: 800px;
+    height: 120px;
     z-index: 5;
 		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
     position: absolute;
@@ -254,6 +281,8 @@ extra credit assignment to send their professors an email. How wild is that?</di
 
 <img src="umnlogo.png" class="logo4" alt="UMN logo from Xenosaga">
 
+<img src="umnlogo.png" class="logo5" alt="UMN logo from Xenosaga">
+
 <img src="persona2internet.jpeg" class="p2image" alt="Wow, cool, Maya-san! You're so good at your job. You even use the Internet?">
 
 <img src="Bunnie.jpg" class="bunnie" alt="Picture of Bunnie from Xenosaga">
@@ -264,6 +293,8 @@ extra credit assignment to send their professors an email. How wild is that?</di
 
 <div class="textbox" style="font-family:Courier, monospace"> Anyways, back to the fanpage. Xenosaga is 
   pretty great, it's a trilogy of three JRPGs that all came out on the PlayStation 2. It's kind of infamous
-  for using the Bible as inspiration, leading to some pretty hilarious wiki pages.</div>
+  for using the Bible as inspiration, leading to some pretty hilarious stuff.</div>
 
+<img src="wiki.png" class="wiki" alt="chaos was best friends with Jesus.">
 
+<img src="666.gif" class="sixsixsix" alt="Jr. looks at his hand.">
