--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
     top: 1250px;
   }
   
+          .logo6{
+    position: absolute;
+    left: 0px;
+    width: 100px;
+  	height: 100px;
+    z-index: 6;
+    top: 1700px;
+  }
+  
   .textbox{
     width: 400px;
     height: 120px;
@@ -132,6 +141,26 @@
     left: 100px;
     top: 1250px;
    border: 1px solid black;
+  }
+  
+    .textbox2{
+    width: 400px;
+    height: 100px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    left: 100px;
+    top: 1700px;
+   border: 1px solid black;
+  }
+  
+  .albedo{
+    width: 400px;
+    height: 200px;
+    z-index: 6;
+    top: 1800px;
+    left: 100px;
+    position: absolute;
   }
   
   .p2image
@@ -258,7 +287,7 @@ html, body {
   <div class="back"></div>
 </div>
 
-<div class="contentheader" style="font-family:Courier, monospace"> This is a fanpage for the Xenosaga games. It's based on 
+<div class="contentheader" style="font-family:Courier, monospace"> This is a fanpage for the Xenosaga games. The design is based on 
 <a href="https://www.youtube.com/watch?v=LFrD8hb_QVo"> the internet portal in the game</a>. </div>
 
 <img src="umnlogo.png" class="logo" alt="UMN logo from Xenosaga">
@@ -292,9 +321,17 @@ extra credit assignment to send their professors an email. How wild is that?</di
 </div>
 
 <div class="textbox" style="font-family:Courier, monospace"> Anyways, back to the fanpage. Xenosaga is 
-  pretty great, it's a trilogy of three JRPGs that all came out on the PlayStation 2. It's kind of infamous
-  for using the Bible as inspiration, leading to some pretty hilarious stuff.</div>
+  really interesting. It's a trilogy of three JRPGs that all came out on the PlayStation 2. It's kind of infamous
+  for using the Bible as inspiration, leading to some pretty hilarious content.</div>
 
 <img src="wiki.png" class="wiki" alt="chaos was best friends with Jesus.">
 
 <img src="666.gif" class="sixsixsix" alt="Jr. looks at his hand.">
+
+<img src="umnlogo.png" class="logo6" alt="UMN logo from Xenosaga">
+
+<div class="textbox2" style="font-family:Courier, monospace"> Now I get to say that my sister’s favorite character is the antichrist. My favorite character is Albedo, one of the villains. 
+  He… <a href="https://www.youtube.com/watch?v=BZGXIYOhqQs"> has a lot going on. </a> </div>
+
+<img src="AlbedoBattle.gif" class="albedo" alt="Albedo rolls his wrist.">
+
