added some schnasty gifs

--- a/index.html
+++ b/index.html
@@ -173,6 +173,26 @@
     position: absolute;
   }
   
+  .kosmos
+  {
+    width: 200px;
+    height: 150px;
+    z-index: 6;
+    top: 100px;
+    left: 0px;
+    position: absolute;
+  }
+  
+   .kosmos2
+  {
+    width: 200px;
+    height: 150px;
+    z-index: 6;
+    top: 100px;
+    right: 0px;
+    position: absolute;
+  }
+  
   
   audio{
     position: fixed;
@@ -288,7 +308,11 @@ html, body {
 </div>
 
 <div class="contentheader" style="font-family:Courier, monospace"> This is a fanpage for the Xenosaga games. The design is based on 
-<a href="https://www.youtube.com/watch?v=LFrD8hb_QVo"> the internet portal in the game</a>. </div>
+<a href="https://www.youtube.com/watch?v=LFrD8hb_QVo" target="_blank"> the internet portal in the game</a>. </div>
+
+<img src="kosmos.gif" class="kosmos" alt="Pixel art of KOS-MOS and Fiora.">
+
+<img src="kosmos.gif" class="kosmos2" alt="Pixel art of KOS-MOS and Fiora.">
 
 <img src="umnlogo.png" class="logo" alt="UMN logo from Xenosaga">
 
@@ -303,7 +327,6 @@ use the internet is pretty funny. But it reminds me that people born after these
 internet for granted.</div>
 
 <img src="umnlogo.png" class="logo3" alt="UMN logo from Xenosaga">
-
 
 <div class="contentheader4" style="font-family:Courier, monospace"> When my parents were my age, and they went to college, they had an 
 extra credit assignment to send their professors an email. How wild is that?</div>
@@ -331,7 +354,16 @@ extra credit assignment to send their professors an email. How wild is that?</di
 <img src="umnlogo.png" class="logo6" alt="UMN logo from Xenosaga">
 
 <div class="textbox2" style="font-family:Courier, monospace"> Now I get to say that my sister’s favorite character is the antichrist. My favorite character is Albedo, one of the villains. 
-  He… <a href="https://www.youtube.com/watch?v=BZGXIYOhqQs"> has a lot going on. </a> </div>
+  He… <a href="https://www.youtube.com/watch?v=BZGXIYOhqQs" target="_blank"> has a lot going on. </a> </div>
 
 <img src="AlbedoBattle.gif" class="albedo" alt="Albedo rolls his wrist.">
 
+<div class="textbox3" style="font-family:Courier, monospace"> The second game in the series is mostly
+about him, which is why it's my favorite.</div>
+
+<img src="umnlogo.png" class="logo7" alt="UMN logo from Xenosaga">
+
+<div class="textbox3" style="font-family:Courier, monospace"> The second game in the series is mostly
+about him, which is why it's my favorite.</div>
+
+<img src="umnlogo.png" class="logo8" alt="UMN logo from Xenosaga">
