--- a/index.html
+++ b/index.html
@@ -132,6 +132,24 @@
     top: 1700px;
   }
   
+            .logo7{
+    position: absolute;
+    left: 0px;
+    width: 100px;
+  	height: 100px;
+    z-index: 6;
+    top: 2000px;
+  }
+  
+            .logo8{
+    position: absolute;
+    left: 0px;
+    width: 100px;
+  	height: 100px;
+    z-index: 6;
+    top: 2200px;
+  }
+  
   .textbox{
     width: 400px;
     height: 120px;
@@ -154,11 +172,42 @@
    border: 1px solid black;
   }
   
+      .textbox3{
+    width: 400px;
+    height: 100px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    left: 100px;
+    top: 2000px;
+   border: 1px solid black;
+  }
+  
+      .textbox4{
+    width: 400px;
+    height: 100px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    left: 100px;
+    top: 2200px;
+   border: 1px solid black;
+  }
+  
   .albedo{
     width: 400px;
     height: 200px;
     z-index: 6;
     top: 1800px;
+    left: 100px;
+    position: absolute;
+  }
+  
+    .gameplay{
+    width: 400px;
+    height: 200px;
+    z-index: 6;
+    top: 2300px;
     left: 100px;
     position: absolute;
   }
@@ -359,11 +408,14 @@ extra credit assignment to send their professors an email. How wild is that?</di
 <img src="AlbedoBattle.gif" class="albedo" alt="Albedo rolls his wrist.">
 
 <div class="textbox3" style="font-family:Courier, monospace"> The second game in the series is mostly
-about him, which is why it's my favorite.</div>
+about him, which is why it's my favorite. He's an extremely complex and
+multifaceted character.</div>
 
 <img src="umnlogo.png" class="logo7" alt="UMN logo from Xenosaga">
 
-<div class="textbox3" style="font-family:Courier, monospace"> The second game in the series is mostly
-about him, which is why it's my favorite.</div>
+<div class="textbox4" style="font-family:Courier, monospace"> The games have
+turn-based combat, with lots of strategic options (and cool animations).</div>
 
 <img src="umnlogo.png" class="logo8" alt="UMN logo from Xenosaga">
+
+<img src="JrVsKevin.gif" class="gameplay" alt="Albedo rolls his wrist.">
