--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     display: flex;
     height: 100vh;
     margin: 0;
+    justify-content: center;
+    align-items: center;
   }
   
   .bunnie {
@@ -247,7 +249,6 @@
     position: fixed;
     bottom: 0;
     z-index: 10;
-    justify-content: center;
   }
 
   
@@ -388,9 +389,7 @@ extra credit assignment to send their professors an email. How wild is that?</di
 
 <img src="Bunnie.jpg" class="bunnie" alt="Picture of Bunnie from Xenosaga">
 
-<div align="center">
-<audio controls autoplaysrc="umn music.mp3"></audio>
-</div>
+<audio controls autoplay src="umn music.mp3"></audio>
 
 <div class="textbox" style="font-family:Courier, monospace"> Anyways, back to the fanpage. Xenosaga is 
   really interesting. It's a trilogy of three JRPGs that all came out on the PlayStation 2. It's kind of infamous
