--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     line-height: 1.5;
   	display: inline-block;
   	vertical-align: middle;
-    text-align: center;
+    text-shadow: 2px 2px #000000;
   }
   
     .header {
@@ -269,7 +269,6 @@
     z-index: 8;
     background: rgba(162, 162, 162, 0.63);
     position: fixed;
-
     top: 0px;
    border: 1px solid black;
   }
@@ -344,7 +343,7 @@ html, body {
 </style>
 
 <div class="header">
-<h1 style="font-family:Courier, monospace"> Welcome to the Unus Mundus Network!</h1>
+<h1 style="font-family:Courier, monospace"; "text-align: center;"> Welcome to the Unus Mundus Network!</h1>
 </div>
 
 
