--- a/index.html
+++ b/index.html
@@ -196,6 +196,18 @@
    border: 1px solid black;
   }
   
+        .textbox5{
+    width: 400px;
+    height: 100px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    content: center;
+    top: 2600px;
+   border: 1px solid black;
+    text-align: center;
+  }
+  
   .albedo{
     width: 400px;
     height: 200px;
@@ -211,6 +223,24 @@
     z-index: 6;
     top: 2300px;
     left: 100px;
+    position: absolute;
+  }
+  
+      .ziggy1{
+    width: 200px;
+    height: 100px;
+    z-index: 6;
+    top: 2600px;
+    left: 0px;
+    position: absolute;
+  }
+  
+        .ziggy2{
+    width: 200px;
+    height: 100px;
+    z-index: 6;
+    top: 2600px;
+    right: 0px;
     position: absolute;
   }
   
@@ -259,6 +289,7 @@
     color: white;    
     line-height: 1.5;
   	display: inline-block;
+    text-align: center;
   	vertical-align: middle;
     text-shadow: 2px 2px #000000;
   }
@@ -406,8 +437,8 @@ extra credit assignment to send their professors an email. How wild is that?</di
 <img src="AlbedoBattle.gif" class="albedo" alt="Albedo rolls his wrist.">
 
 <div class="textbox3" style="font-family:Courier, monospace"> The second game in the series is mostly
-about him, which is why it's my favorite. He's an extremely complex and
-multifaceted character.</div>
+about him, which is why it's my favorite. I think his dialogue has made
+me feel every single human emotion at some point.</div>
 
 <img src="umnlogo.png" class="logo7" alt="UMN logo from Xenosaga">
 
@@ -417,3 +448,11 @@ turn-based combat, with lots of strategic options (and cool animations).</div>
 <img src="umnlogo.png" class="logo8" alt="UMN logo from Xenosaga">
 
 <img src="JrVsKevin.gif" class="gameplay" alt="Albedo rolls his wrist.">
+
+<img src="ZiggyEscalator.gif" class="ziggy1" alt="Albedo rolls his wrist.">
+
+<img src="ZiggyEscalator.gif" class="ziggy2" alt="Albedo rolls his wrist.">
+
+<div class="textbox5" style="font-family:Courier, monospace"> Me waiting for 
+the remaster </div>
+
