--- a/index.html
+++ b/index.html
@@ -208,6 +208,19 @@
     text-align: center;
   }
   
+          .textbox6{
+    width: 400px;
+    height: 100px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    content: center;
+    left: 100px;
+    top: 2800px;
+   border: 1px solid black;
+    text-align: center;
+  }
+  
   .albedo{
     width: 400px;
     height: 200px;
@@ -240,6 +253,39 @@
     height: 100px;
     z-index: 6;
     top: 2600px;
+    right: 0px;
+    position: absolute;
+  }
+  
+        .mail{
+    width: 140px;
+    height: 102px;
+    z-index: 6;
+    top: 2800px;
+    left: 0px;
+    position: absolute;
+  }
+  
+          .rubedo1{
+    width: 140px;
+    height: 200px;
+    z-index: 6;
+    top: 3000px;
+    left: 0px;
+    position: absolute;
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH";
+  }
+  
+            .rubedo2{
+    width: 140px;
+    height: 200px;
+    z-index: 6;
+    top: 3000px;
     right: 0px;
     position: absolute;
   }
@@ -442,17 +488,25 @@ me feel every single human emotion at some point.</div>
 
 <img src="umnlogo.png" class="logo7" alt="UMN logo from Xenosaga">
 
-<div class="textbox4" style="font-family:Courier, monospace"> The games have
-turn-based combat, with lots of strategic options (and cool animations).</div>
+<div class="textbox4" style="font-family:Courier, monospace"> And of course they're games, too, which have
+turn-based combat with lots of strategic options (and cool animations).</div>
 
 <img src="umnlogo.png" class="logo8" alt="UMN logo from Xenosaga">
 
-<img src="JrVsKevin.gif" class="gameplay" alt="Albedo rolls his wrist.">
+<img src="JrVsKevin.gif" class="gameplay" alt="Jr. performs an attack.">
 
-<img src="ZiggyEscalator.gif" class="ziggy1" alt="Albedo rolls his wrist.">
+<img src="ZiggyEscalator.gif" class="ziggy1" alt="Ziggy waits on an escalator.">
 
-<img src="ZiggyEscalator.gif" class="ziggy2" alt="Albedo rolls his wrist.">
+<img src="ZiggyEscalator.gif" class="ziggy2" alt="Ziggy waits on an escalator.">
 
-<div class="textbox5" style="font-family:Courier, monospace"> Me waiting for 
+<div class="textbox5" style="font-family:Courier, monospace"> me waiting for 
 the remaster </div>
+
+<img src="mail.png" class="mail" alt="Mail icon from Xenosaga 1.">
+
+<div class="textbox6" style="font-family:Courier, monospace"> <a href="mailto: nstachowiak@uchicago.edu">Mail me!</a> </div>
+
+<img src="rubedo.png" class="rubedo1" alt="Mail icon from Xenosaga 1.">
+
+<img src="rubedo.png" class="rubedo2" alt="Mail icon from Xenosaga 1.">
 
