--- a/index.html
+++ b/index.html
@@ -221,6 +221,18 @@
     text-align: center;
   }
   
+          .textbox7{
+    width: 400px;
+    height: 100px;
+    z-index: 5;
+		background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(233,233,233,0) 100%);
+    position: absolute;
+    content: center;
+    top: 3000px;
+   border: 1px solid black;
+    text-align: center;
+  }
+  
   .albedo{
     width: 400px;
     height: 200px;
@@ -510,3 +522,5 @@ the remaster </div>
 
 <img src="rubedo.png" class="rubedo2" alt="Mail icon from Xenosaga 1.">
 
+<div class="textbox7" style="font-family:Courier, monospace"> Yo, Rubedo! <br> <br> This page 
+is still under construction. </div>
